# ros2_markertracker

./: .gitignore  package.xml  readme.md  setup.cfg  setup.py
calibration/: raspicam_v2_640x480.yaml
launch/: default_iris_fpv_hd_cam.launch  default_vi_cam_rotors.launch  performance_raspicam.launch
msg/: GateMarker.msg  GateMarkersArray.msg
ros2_markertracker/: ego_tf_subscriber.py  markertracker_node.py  package.xml  process_frame_topic.py  setup.py
ros2_markertracker/calibration/: camerav2_1280x720.yaml  iris_fpv_cam_640x480.yaml  vi_cam_depth_RotorS.yaml
ros2_markertracker/launch/: default_raspicam.launch  markertracker_raspicam_1280x720.launch.py  raspicam_1280x720.launch.py  v4l2_camera.launch.py
ros2_markertracker/ros2_markertracker/: ArucoWrapper.py  markertracker_node.py  transformations.py
ros2_markertracker_interfaces/: CMakeLists.txt  package.xml
ros2_markertracker_interfaces/msg/: FiducialMarkerArray.msg
